--- a/wrangler.toml.example
+++ b/wrangler.toml.example
@@ -66,7 +66,7 @@ AI_GATEWAY_ID = "your-ai-gateway-id"
 # 生产环境 (正式部署)
 # ========================================
 [env.production]
-name = "galatea-ai-production"
+name = "cloudflare-ai-gateway-production"
 
 # 生产环境 AI 绑定
 [env.production.ai]
